--- a/TodoManager2/TodoManager2.csproj
+++ b/TodoManager2/TodoManager2.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="model\DatabaseHelper.cs" />
     <Compile Include="model\Todo.cs" />
+    <Compile Include="model\TodoReaderWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
