機能追加 / Todo オブジェクトをデータベースに追加する機能を追加

--- a/TodoManager2Tests/TodoManager2Tests.csproj
+++ b/TodoManager2Tests/TodoManager2Tests.csproj
@@ -60,6 +60,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="model\DatabaseHelperTests.cs" />
+    <Compile Include="model\TodoReaderWriterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
