--- a/TodoManager2/packages.config
+++ b/TodoManager2/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Blend.Interactivity.Wpf" version="1.0.1340.0" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
