クラス追加 / タグによるフィルタリングの際、必要な情報を格納するクラスを追加

--- a/TodoManager2/TodoManager2.csproj
+++ b/TodoManager2/TodoManager2.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="model\DatabaseHelper.cs" />
+    <Compile Include="model\Tag.cs" />
     <Compile Include="model\Todo.cs" />
     <Compile Include="model\TodoReaderWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
