機能追加 / Todo の検索条件をまとめたクラスを作成
TodoReaderWriter のメソッドで Todo の検索を行う際、このオブジェクトを引数にして指定する

--- a/TodoManager2/TodoManager2.csproj
+++ b/TodoManager2/TodoManager2.csproj
@@ -94,6 +94,7 @@
     <Compile Include="model\Tag.cs" />
     <Compile Include="model\Todo.cs" />
     <Compile Include="model\TodoReaderWriter.cs" />
+    <Compile Include="model\TodoSearchOption.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
